--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,7 @@ p {
     font-size: 16px;
 }
 
+/* Hero section styling */
 .hero {
     height: 800px;
     width: 100%;
@@ -86,7 +87,7 @@ p {
     clear: both;
     float: right;
     width: 20%;
-    height: 185%; /* adjusted height from 100 to 185 because background portion stopped half way of the section */
+    height: 100%; 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
@@ -193,9 +194,8 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
+} */
 
-*/
 .content div {
     margin-bottom: 20px;
     padding: 50px;
@@ -249,6 +249,8 @@ p {
 }
 /* Main content end */
 
+
+/* footer styling */
 .footer {
     padding: 30px;
     clear: both;
